--- a/Presentation/ECommerceAPI.API/ECommerceAPI.API.csproj
+++ b/Presentation/ECommerceAPI.API/ECommerceAPI.API.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\ECommerceAPI.Application\ECommerceAPI.Application.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\ECommerce.Infrastructure\ECommerceAPI.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Infrastructure\ECommerce.Persistance\ECommerceAPI.Persistance.csproj" />
   </ItemGroup>
 
