--- a/Presentation/ECommerceAPI.API/appsettings.json
+++ b/Presentation/ECommerceAPI.API/appsettings.json
@@ -19,6 +19,16 @@
     "Audience": "www.bilmemne.com",
     "Issuer": "www.myapi.com",
     "SecurityKey": "sebepsiz bos yere ayrilacaksan..."
+  },
+  "ExternalLoginSettings": {
+    "Facebook": {
+      "Client_ID": "546631843676576",
+      "Client_Secret": "d323213123539934939asad92139139ac"
+
+    },
+    "Google": {
+      "Client_ID": "GoogleCloudId yazılacak buraya normalde"
+    }
   }
 
 }
